Be a lot more specific about parental coordinates for simulated variants in child's genome